2007-11-04  Martin Hawlisch  <Martin.Hawlisch@gmx.de>
	* src/gen/lib/Makefile.am
	* src/gen/db/Makefile.am
	* src/gen/proxy/Makefile.am
	* src/gen/utils/Makefile.am: Fix path structure

2007-11-03  Stéphane Charette  <stephanecharette@gmail.com>
	* src/plugins/NarrativeWeb.py: resize and link to large images

2007-11-03 Gary Burton <gary.burton@zen.co.uk>
	* src/plugins/DetDescendantReport.py
	* src/plugins/DetAncestralReport.py
	Added functionality to print event and event reference notes. issue #1335

2007-11-02  Stéphane Charette  <stephanecharette@gmail.com>
	* src/plugins/NarrativeWeb.py: issue #1340, do not display mime-types
        in NarrativeWeb for image/*

2007-11-01  Martin Hawlisch  <Martin.Hawlisch@gmx.de>
	* configure.in: We have a runtime check for Python 2.5. Do the same
	here by using AM_PATH_PYTHON(2.5)
	* src/plugins/TestcaseGenerator.py: finalize RelLib -> gen.lib
	transitition

2007-10-31  Jim Sack <jgsack@san.rr.com>
	* src/gen/db/dbdir.py bug #1331 write_lock_file() add mkdir if needed
	* src/gramps.py bug #1332 more gramps termination problems fixed
	* src/ArgHandler bug #1333 change remove to glob remove and rmdir
	*  (op cit) bug #1334 update module name and calling parm to import2
	*    and function name: s/export_data/write_gedcom_file/

2007-10-31  Martin Hawlisch  <Martin.Hawlisch@gmx.de>
	* src/DataViews/_EventView.py: Add properties icon to column editor
	  menu entry - the other views use that too.

2007-10-31  Blank  <dblank@cs.brynmawr.edu>
	* src/plugins/Calendar.py: added capitalize() to months/days; dst()
	* src/plugins/holidays.xml: uses dst() Daylight Saving Time function

2007-10-31 Benny Malengier <benny.malengier@gramps-project.org>
	* src/plugins/all_relations.py: use collapse family
	* src/Relationship.py: add collopse equal family

2007-10-30  Douglas S. Blank  <dblank@cs.brynmawr.edu>
	* src/plugins/Calendar.py: added Peter Landgren's locale suggestions

2007-10-30 Gary Burton <gary.burton@zen.co.uk>